--- a/templates/inscription/formulaire.html
+++ b/templates/inscription/formulaire.html
@@ -112,6 +112,20 @@
         </form>
     </div>
 </div>
+<style>
+    body {
+        background-color: #68a9e9; /* Couleur de fond gris clair */
+    }
+    .btn-primary {
+        background-color: #1e45f3 !important; /* Bouton vert ciel (aquamarine) */
+        border-color: none !important;
+        color: #f6fafa !important; /* Texte noir pour une meilleure lisibilité */
+    }
+    .btn-primary:hover {
+        background-color: #0df02b !important;
+        border-color: white !important;
+    }
+</style>
 {% endblock %}
 
 {% block extra_js %}
