--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,15 @@
     <title>{% block title %}Concours ESATIC{% endblock %}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
+        .nav-link {
+            color: white !important;
+            font-size: 1.5em;
+        }
+        .nav-link:hover {
+            color: #f8f9fa !important;
+            transition: color 0.3s ease;
+
+        }
         :root {
             --primary-color: #0056b3;
             --secondary-color: #4285f4;
@@ -22,7 +31,7 @@
         }
         
         .footer {
-            background-color: var(--primary-color);
+            background-color: #003366;
             color: white;
             padding: 1rem 0;
             margin-top: 2rem;
@@ -49,7 +58,11 @@
         .logo-text {
             font-size: 2.5rem;
             font-weight: bold;
-            color: var(--primary-color);
+            color: white;
+        }
+        .image {
+            width: 130px;
+            height: auto;
         }
     </style>
     {% block extra_css %}{% endblock %}
@@ -58,17 +71,17 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="{% url 'accueil' %}">Concours ESATIC</a>
+            <a class="navbar-brand" href="{% url 'accueil' %}"><img class="image" src="../static/img/logo_esatic.jpg" alt=""></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'accueil' %}">Accueil</a>
+                        <a class="nav-link" href="{% url 'accueil' %}"><strong>Accueil</strong></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'nouvelle-inscription' %}">S'inscrire</a>
+                        <a class="nav-link" href="{% url 'nouvelle-inscription' %}"><strong>S'inscrire</strong></a>
                     </li>
                 </ul>
             </div>
@@ -77,8 +90,8 @@
 
     <!-- Header Logo -->
     <div class="header-logo">
-        <div class="logo-text">ESATIC</div>
-        <p>École Supérieure Africaine des TIC</p>
+        <div class="logo-text">INSCRIPTION CONCOURS ESATIC</div>
+        <p><strong>École Supérieure Africaine des TIC</strong></p>
     </div>
 
     <!-- Messages -->
